# long-earn

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  RALPH_PROGRESS.md  RALPH_PROMPT.md  README.md  TODO.md  best_strategy.yaml  format.sh  langgraph.json  profit_growth_strategy.yaml  pyproject.toml  strategy_research_results.json  test_stock_name_extraction.py  test_stock_subgraph.py
.github/workflows/: ci.yml
.trae/rules/: init.md
backtest_service/: README.md  example_strategy.py  pyproject.toml
backtest_service/src/long_earn_backtest/: __main__.py  server.py
backtest_service/tests/: test_backtest_with_strategy.py  test_data_extraction.py  test_integration.py
docs/: tot_explanation.md
docs/adr/: 001-yaml-dsl-strategy.md  002-partial-node-injection.md  003-ast-safe-evaluator.md  004-memory-system.md  006-ciccwm-data-provider.md  007-config-centralization.md  007-unified-substance-architecture.md  008-parallel-backtest-and-unified-templating.md  008-realtime-data-provider.md  009-operator-catalog-and-operator-dev-subgraph.md  010-hypothesis-tree-refinement.md  011-enhanced-realtime-analysis.md
docs/research/: agent-framework-selection-2026.md
init/: 01_data.md  02_strategy.md  03_signals.md  04_backtest.md  05_metrics.md  06_errors.md  07_example.md  08_glossary.md  README.md
plan/: hypothesis-tree-refinement-plan.md
plans/: parallel-backtest-and-unified-templating.md
scripts/: backfill_financial_derived.py  clean_cache_bonds.py  download_data.py  profit_growth_backtest_mock.py  strategy_research_loop.py  test_backtest_math.py  test_backtest_math_verification.py  test_strategy_rd_e2e.py
src/long_earn/: __main__.py  agent.py  config.py  context_init.py  state.py
src/long_earn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/long_earn/backtest/: __init__.py  models.py
src/long_earn/backtest/data/: akshare_provider.py  cache.py  ciccwm_client.py  ciccwm_provider.py  miniqmt_provider.py  polars_adapter.py  provider.py  realtime.py  symbol.py  universe.py
src/long_earn/backtest/domain/: __init__.py  entities.py  exceptions.py  interfaces.py
src/long_earn/backtest/engine/: audit.py  broker.py  core.py  dsl.py  evaluator.py  ml_strategy.py  operator_executor.py  parallel.py  param_grid.py  portfolio.py  shared_data.py  strategy.py  strategy_templates.py  telemetry.py  visibility.py
src/long_earn/backtest/operators/: __init__.py  _loader.py  _util.py
src/long_earn/callbacks/: exception.py  logger.py  monitoring.py  performance.py  token.py
src/long_earn/core/: llm_utils.py  prompt_loader.py  render.py
src/long_earn/dashboard/: __init__.py  analyzer.py  api.py
src/long_earn/dashboard/templates/: dashboard.html
src/long_earn/memory/: __init__.py  embedding.py  graph.py  store.py  tfidf.py
src/long_earn/monitoring/: realtime_alert.py
src/long_earn/operator_dev/: agents.py  backlog.py  sandbox.py  spec.py  state.py
src/long_earn/services/: __init__.py  backtest_service.py  knowledge_service.py  llm_service.py  logger_service.py  memory_service.py  monitoring_service.py  service_manager.py  stock_service.py
src/long_earn/stock_analysis/: state.py  subgraph.py
src/long_earn/stock_analysis/agents/: buffett_analyst.py  buffett_prompt.md  buffett_prompt.py  charles_munger_analyst.py  charles_munger_prompt.md  charles_munger_prompt.py  extract_prompt.md  extract_prompt.py  fiske_analyst.py  fiske_prompt.md  fiske_prompt.py  fund_flow_analyst.py  fund_flow_prompt.md  petter_analyst.py  petter_prompt.md  petter_prompt.py
src/long_earn/strategy_optimization/: acceptance.py  pipeline.py
src/long_earn/strategy_rd/: htr_subgraph.py  hypothesis_tree.py  state.py  subgraph.py  tree_store.py
src/long_earn/strategy_rd/agents/: backpropagate_prompt.md  decide_prompt.md  (+16 more)
src/long_earn/substance/: __init__.py  model.py  motion.py  persistence.py  store.py
src/long_earn/tools/: __init__.py  akshare.py  backtest.py  backtest_analyzer.py  code_safety_check.py  get_stock_info.py  kimi_web_search.py  md_splitter.py  store.py  tavily_search.py  visualization_api.py
src/long_earn/utils/: __init__.py  llm_factory.py  logger.py
temp/: generated_strategy.py  strategy_stock_20260311_010103.py
tests/: README.md  README_STRATEGY_RD.md  README_test_report.md  __init__.py  conftest.py  test_backtest.py  test_main.py  test_stock_analysis.py  test_strategy_develop.py  test_strategy_rd.py  test_strategy_rd_integration.py  test_strategy_rd_unit.py  test_strategy_research.py  test_tools.py
tests/integration/: conftest.py  test_backtest_risk_integration.py  test_context_init.py  test_dashboard_analyzer_integration.py  test_data_provider_degradation.py  test_develop_backtest.py  test_memory_service_recall.py  test_prompt_loader_integration.py  test_stock_analysis_subgraph.py  test_strategy_rd_subgraph.py
tests/unit/: test_audit_flow.py  test_auto_evolution_system.py  test_backtest_ml_telemetry.py  test_config.py  test_event_engine.py  test_prompt_loader.py  test_realtime_analysis.py  test_visualization_api.py
tests/unit/test_backtest/: test_advanced_orders.py  test_broker.py  test_ciccwm_client.py  test_ciccwm_provider.py  test_domain.py  test_dsl.py  test_engine.py  test_evaluator.py  test_parallel.py  test_param_grid.py  test_portfolio.py  test_realtime.py  test_render.py  test_strategy_templates.py  test_visibility.py
tests/unit/test_dashboard/: test_trade_export.py
tests/unit/test_memory/: test_graph.py  test_memory_enhanced.py  test_memory_scenarios.py  test_store.py  test_tfidf.py
tests/unit/test_operator_dev/: __init__.py  test_operator_dev_e2e.py
tests/unit/test_services/: test_backtest_service.py  test_llm_service.py  test_memory_service.py
tests/unit/test_stock_analysis/: test_fund_flow_analyst.py
tests/unit/test_strategy_optimization/: __init__.py
tests/unit/test_strategy_rd/: __init__.py  test_htr_subgraph.py  test_hypothesis_tree.py  test_strategy_rd_fixes.py  test_tree_store.py
tests/unit/test_substance/: test_activate.py  test_graph.py  test_model.py  test_motion.py  test_store.py
(+16 files in other folders)
