[project]
name = "long_earn"
version = "0.7.0"
description = "自我进化的量化交易系统"
authors = [
    { name = "shiyz", email = "shiyz@eoutlook.com" },
]
requires-python = "==3.11.*"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.2.0",
    "ollama>=0.2.0",
    "langchain-ollama>=0.2.0",
    "loguru>=0.7.0",
    "faiss-cpu>=1.13.0",
    "langgraph-cli[inmem]>=0.4.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "akshare>=1.10.0",
    "langchain-qdrant>=0.2.1",
    "qdrant-client>=1.16.1",
    "tavily-python>=0.7.23",
    "httpx>=0.25.0",
]

[project.scripts]
long_earn = "long_earn.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.11",
]
[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"


[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["long_earn"]
combine-as-imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
