[project]
name = "long_earn"
version = "1.0.1"
description = "自我进化的量化交易系统"
authors = [
    { name = "shiyz", email = "shiyz@eoutlook.com" },
]
requires-python = "==3.13.*"
dependencies = [
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.2.0",
    "ollama>=0.2.0",
    "langchain-ollama>=0.2.0",
    "loguru>=0.7.0",
    "faiss-cpu>=1.13.0",
    "langgraph-cli[inmem]>=0.4.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "duckdb>=0.10.0",
    "xtquant>=2024.01.01",
    "pyyaml>=6.0.0",
    "tavily-python>=0.7.23",
    "httpx>=0.25.0",
    "pyarrow>=24.0.0",
    "akshare>=1.18.64",
]

[project.scripts]
long_earn = "long_earn.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.11",
]
embed = [
    "sentence-transformers>=3.0.0",
]
[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"


[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C", "PL", "ARG"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415", "PLR2004", "ARG001", "ARG002", "ARG005", "PLR0913"]
"tests/integration/conftest.py" = ["PLC0415", "PLR2004", "PLR0912", "PLR0915", "PLW2901"]
"src/long_earn/backtest/data/provider.py" = ["I001", "PLC0415"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["long_earn"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=long_earn --cov-report=term --cov-report=html --cov-fail-under=0"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/long_earn"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false

[tool.importlinter]
root_package = "long_earn"

[[tool.importlinter.contracts]]
id = "backtest_data_independent"
name = "数据层不依赖上层模块"
type = "independence"
modules = ["long_earn.backtest.data"]
message = "backtest.data 层不应依赖 engine/services/tools"

[[tool.importlinter.contracts]]
id = "service_architecture"
name = "服务层不依赖 tools"
type = "independence"
modules = ["long_earn.services"]
message = "services 层不应依赖 tools 模块"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "import-linter>=2.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20260510",
    "types-pytz>=2026.2.0.20260506",
]
