[project]
name = "long-earn-backtest"
version = "0.1.0"
description = "基于 qlib 的回测服务"
authors = [
    { name = "shiyz", email = "shiyz@eoutlook.com" },
]
requires-python = "==3.11.*"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyqlib>=0.9.7",
    "protobuf<4.0",
    "setuptools<60",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
long_earn_backtest = "long_earn_backtest.__main__:main"

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
 
[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
